tests/negative/gold/bad-literal4-test.gold
tests/negative/bad-literal4-test.toit:6:9: error: Invalid number literal
  print 123456_
        ^~~~~~~
tests/negative/bad-literal4-test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
